[package]
name = "helius"
version = "0.1.1"
edition = "2021"
description = "Local-first personal finance tracker for Windows with a Rust CLI/TUI, SQLite storage, budgets, recurring bills, and cash-flow forecasting"
license = "MIT"
readme = "README.md"
repository = "https://github.com/STVR393/helius"
homepage = "https://github.com/STVR393/helius"
keywords = ["personal-finance", "budget-tracker", "ledger", "tui", "sqlite"]
categories = ["command-line-utilities", "database"]

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
crossterm = "0.28.1"
csv = "1.4.0"
directories = "5.0.1"
ratatui = "0.29.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
thiserror = "1.0.69"
ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
tiny_http = "0.12.0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"


